[gd_scene load_steps=5 format=3 uid="uid://drm1uqu1hdq5k"]

[ext_resource type="Texture2D" uid="uid://dmjlr3jyplmni" path="res://kenney_assets/PrologueWorld2_Page1.png" id="1_jccya"]
[ext_resource type="Script" path="res://Scripts/PrologueWorld2.gd" id="1_qtrx1"]
[ext_resource type="Texture2D" uid="uid://b5pynxxxdifu8" path="res://kenney_assets/PrologueWorld2_Page2.png" id="2_5nxkh"]
[ext_resource type="Texture2D" uid="uid://twajqgb2iexl" path="res://kenney_assets/PrologueWorld2_Page3.png" id="3_in5je"]

[node name="PrologueWorld2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtrx1")

[node name="Page1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("1_jccya")

[node name="Page2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("2_5nxkh")

[node name="Page3" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("3_in5je")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 243.0
offset_right = 567.0
offset_bottom = 306.0
text = "You, along with mulitple squads, head to the battlefield."

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
